feat: oauth2 server: allow local auth (requires basic spring profile)